# Civilizational-Blueprint

./: CLAUDE.pdt  CLAUDE_decompressed.md  README.md  _nul.7z  et_compressor.pdt  et_compressor.py  et_compressor_v2.0.0.py  et_compressor_v2.1.0.py
.claude/: settings.local.json
Analyzing Oneself/: Cognitive.md  Psychological.md
Eternal Memory/: EMP_Architectural_Updates (1).txt  (+1 more)
Working Programming Directory/ET Python Library/: ETPL.py  ETPL_IDE_ROADMAP.md  MANIFEST.in  SETUP_AND_USAGE_GUIDE.md  et_minecraft_log.txt  etpl_ide_stage2_enhancements.py  pyproject.toml
Working Programming Directory/ET Python Library/Documentation/: CLAUDE.md  QUICK_REFERENCE.md
Working Programming Directory/ET Python Library/Documentation/Version Information/: COMPLETE_V3_1_DELIVERY.md  ET_v3_10_0_IMPLEMENTATION_SUMMARY.md  FOUNDATION_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v3_9_0 (1).md  SESSION_SUMMARY_FINAL_v3_3.md  SESSION_SUMMARY_v3_2.md
Working Programming Directory/ET Python Library/exception_theory/: __init__.py
Working Programming Directory/ET Python Library/exception_theory/classes/: batch1.py  batch10.py  batch12.py  batch18.txt  batch21.py  batch22.py  batch3.py  batch5.py
Working Programming Directory/ET Python Library/exception_theory/core/: __init__.txt
Working Programming Directory/ET Python Library/exception_theory/engine/: __init__.py  sovereign.py
Working Programming Directory/ET Python Library/exception_theory/tests/: __init__.py
Working Programming Directory/ET Python Library/exception_theory/utils/: __init__.py  calibration.py  logging.py
Working Programming Directory/ET Python Library/nppBackup/: ET_MC.py.2026-01-26_133137.bak  ET_MC.py.2026-01-26_133351.bak  ET_MC.py.2026-01-26_134458.bak  ET_MC.py.2026-01-26_142859.bak  ET_MC.py.2026-01-26_143504.bak  ET_MC.py.2026-01-26_150203.bak  et_web_archiver_COMPLETE_ALL_PHASES.py.2026-02-03_231231.bak  et_web_archiver_FIXED_COMPLETE.py.2026-02-04_085206.bak  webpage_downloader.py.2026-02-03_145340.bak  webpage_downloader.py.2026-02-03_151818.bak  webpage_downloader.py.2026-02-03_152625.bak  webpage_downloader.py.2026-02-03_152647.bak  webpage_downloader.py.2026-02-03_153607.bak  webpage_downloader.py.2026-02-03_154208.bak  webpage_downloader.py.2026-02-03_154429.bak  webpage_downloader.py.2026-02-03_154908.bak  webpage_downloader.py.2026-02-03_155212.bak  webpage_downloader.py.2026-02-03_161236.bak
(+539 files in other folders)
